--- a/JavaScript練習/Homework/拼圖/拼圖_05.html
+++ b/JavaScript練習/Homework/拼圖/拼圖_05.html
@@ -19,9 +19,9 @@
 <body>
     <div class="btn-group">
         <button id="random">打亂拼圖</button>
-        <button id="reset">重新開始</button>
+        <button id="reset">完成後重新開始</button>
         <!-- <br> -->
-        <button id="top-btn">無功能</button>
+        <button id="newgame">重新新一局</button>
         <button id="down-btn">無功能</button>
     </div>
     <div class="container">
